# snippets

./: README.md  io.py  io_snippets.py  pyproject.toml
snippets/: vector2.py
